--- a/web開発/main/index.html
+++ b/web開発/main/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
+
+    <link href="/css/main.css" rel="stylesheet">
     <title>なとりうむうぇぶ</title>
 </head>
 <body>
+    <header>
+        <h1 class="title">なとりうむのweb</h1>
+    </header>
 </body>
 </html>
