header and  footer

--- a/web開発/main/index.html
+++ b/web開発/main/index.html
@@ -11,6 +11,20 @@
 <body>
     <header>
         <h1 class="title">なとりうむのweb</h1>
+        <nav class="all">
+            <ul>
+            <li class="current"><a href="#">Home</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Access</a></li>
+            <li><a href="#">Blog</a></li>
+            </ul>
+            </nav>
     </header>
+    <footer>
+        <div class="copyright">
+            <p>©2024 natoriumm</p>
+        </div>
+    </footer>
 </body>
 </html>
